Updated styles for 'admin' button to be invisible. Fixed reset of local storage for restaurant bookings.

--- a/v-taphouse/css/styles.css
+++ b/v-taphouse/css/styles.css
@@ -1036,7 +1036,7 @@ input[type="submit"] {
 	right: auto;
 	left: 1440px;
 	transform: translateX(-50%);
-	opacity: 0.1;
+	opacity: 0;
 }
 
 #map-focus {
